workflow/script/ works

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,6 +1,6 @@
 configfile: "config.yaml"
 import os
-from ccount import input_names, get_samples
+from scripts.ccount import input_names, get_samples
 
 DATA_DIR=config["DATA_DIR"]
 FORMAT=config["FORMAT"]
