--- a/config.yaml
+++ b/config.yaml
@@ -11,20 +11,20 @@ WEIGHT2: None
 # (Please don't change unless you're developer)
 
 # blob detection
-test_mode: True
+test_mode: False
 block_height: 2000
 block_width: 2400  # if < 0, skip block equalization
 scaling_factor: 4  # 1, 2,4
-max_sigma: 20 # 20-50
-min_sigma: 8  # 2-8
-num_sigma: 10  # smaller->faster, less accurate, 5-20
+max_sigma: 6 # 20-50
+min_sigma: 3  # 2-8
+num_sigma: 20  # smaller->faster, less accurate, 5-20
 threshold: 0.02
 visualization: True
 equalization: True
-blob_extention_ratio: 1.4 # soft extend blob radius manually (1.4)
-blob_extention_radius: 2 # pixcels to extend (2)
+blob_extention_ratio: 1.0 # soft extend blob radius manually (1.4)
+blob_extention_radius: 0 # pixcels to extend (2)
 crop_width: 80  # padding width, which is cropped img width/2 (50)
-overlap: .0
+overlap: .8
 
 
 # Notes
@@ -40,10 +40,10 @@ overlap: .0
 #     min_sigma=2
 #     num_sigma=10
 #     threshold=0.1
-# elif scaling_factor == 4:
-#     max_sigma=20
-#     min_sigma=8
-#     num_sigma=10  # Aug2019: 10 better sensitivity than 5, 1/2 speed
-#     threshold=0.02
+# elif scaling_factor == 4 and FL:
+  # max_sigma: 5 # 20-50 
+  # min_sigma: 2  # 2-8
+  # num_sigma: 20  # smaller->faster, less accurate, 5-20
+  # threshold: 0.02
 # else:
 #     raise Exception("scaling factor not implemented")
