--- a/config.yaml
+++ b/config.yaml
@@ -11,10 +11,10 @@ WEIGHT2: None
 # (Please don't change unless you're developer)
 
 # blob detection
-test_mode: False
+test_mode: True
 block_height: 2000
 block_width: 2400  # if < 0, skip block equalization
-scaling_factor: 4  # 1, 2,4
+scaling_factor: 4  # 1, 2, 4 (08/23/2021 for blob_detection)
 max_sigma: 6 # 20-50
 min_sigma: 3  # 2-8
 num_sigma: 20  # smaller->faster, less accurate, 5-20
